--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -11,7 +11,7 @@ $layout-name: "navegacao-principal";
             display: flex;
             justify-content: space-around;
             align-items: center;
-            height: 15vh;
+            height: 8vh;
             background: black;
             color: white;
             font-weight: bold;
@@ -20,7 +20,7 @@ $layout-name: "navegacao-principal";
             font-size: 18px;
             padding: 15px;
             .navegacao-container-foto{
-                height: 40px;
+                height: 55px;
                 border-radius: 40px;
                 margin-right: 15vw;
                 font-size: 20pt;
@@ -45,7 +45,7 @@ $layout-name: "navegacao-principal";
                            color: black;
                            cursor: pointer;
                            font-weight: bold;
-                           font-size: 24px;
+                           font-size: 18pt;
                            padding: 5px;
                            border: none;
                            border-radius: 200rem;
