--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 15vh;
+  height: 8vh;
   background: black;
   color: white;
   font-weight: bold;
@@ -19,7 +19,7 @@
   padding: 15px;
 }
 .navegacao-principal .menu-fixo .navegacao-container .navegacao-container-foto {
-  height: 40px;
+  height: 55px;
   border-radius: 40px;
   margin-right: 15vw;
   font-size: 20pt;
@@ -42,7 +42,7 @@
   color: black;
   cursor: pointer;
   font-weight: bold;
-  font-size: 24px;
+  font-size: 18pt;
   padding: 5px;
   border: none;
   border-radius: 200rem;
