--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,17 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 8vh;
+  height: 10vh;
   background: black;
   color: white;
   font-weight: bold;
   border: none;
   transition: 0.5 all ease-in-out;
-  font-size: 18px;
+  font-size: 20px;
   padding: 15px;
 }
 .navegacao-principal .menu-fixo .navegacao-container .navegacao-container-foto {
-  height: 55px;
+  height: 60px;
   border-radius: 40px;
   margin-right: 15vw;
   font-size: 20pt;
@@ -108,7 +108,7 @@
   transition: 0.5s all ease-in-out;
   cursor: pointer;
 }
-.home-btn .fa-angle-down {
+.home-btn .btn .fa-angle-down {
   font-size: 60pt;
   animation: flutuando 1s ease-in-out infinite;
 }
